Added Boot strap and fixed some of the Regex. Added links to common books used.

--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,15 @@
 .wrapper fieldset {
     margin: 20px 0;
 }
+
+.maxWidth {
+  width: 100%;
+}
+
+textarea {
+  height: 500px;
+}
+
+input {
+  width: 100%;
+}
